# global-exchanges

./: .gitignore  README.md  pyproject.toml  requirements.txt  sql_research.ipynb
_exchanges/: CCASS.py  HKEX.py  HSI.py  KRX.py  NYSE.py  __init__.py
stock_exchanges/: HKEX.py  HSI.py  KRX.py  __init__.py
stock_exchanges.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  test_HKEX.py
